--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="jumbotron text-center">       
+    <div class="jumbotron text-center bg-image img-fluid text-light">  
         <h1>Bienvenue chez vous</h1>
         <p>Là où le bonheur se découvre en se sentant chez soi</p>
         <a class="btn btn-danger btn-lg" href="COntact.html" role="button">Réservation</a>
@@ -18,7 +18,7 @@
     <br>
     <br>
     <div container class="d-flex flex-wrap justify-content-center text-center">
-    <div>
+      <div>
         <div class="card" style="width: 25rem; margin-right: 30px;">
             <div class="card-body">
               <h5 class="card-title">Chez Vous</h5>
@@ -27,18 +27,15 @@
               <a href="Menu.html" class="card-link btn btn-warning">Viendez-ici</a>
             </div>
         </div>   
-    </div>
-
-    <div>
+      </div>   
         <div class="card"  style="width: 25rem; margin-left: 30px;">
           <div class="card-body">
             <h5 class="card-title">Chez Vous</h5>
             <h6 class="card-subtitle mb-2 text-muted">Le BioMarket</h6>
             <p class="card-text">Rue de la positude,24A <br>1232 Zenlandia <br>+98/1432.4.5543</p>
-            <a href="biormarket.html" class="card-link btn btn-warning">Viendez-là</a>
+            <a href="biomarket.html" class="card-link btn btn-warning">Viendez-là</a>
           </div>
         </div>  
-    </div>
     </div>
 
     
