--- a/biomarket.html
+++ b/biomarket.html
@@ -9,23 +9,23 @@
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="Welcome.html">Chez vous</a>
+      <a class="navbar-brand" href="Welcome.html">Chez vous BioMarket</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="Welcome.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="#">Paniers de légumes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Menu.html">Menu</a>
+            <a class="nav-link" href="#">Notre ferme</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Restaurant.html">Restaurant</a>
+            <a class="nav-link" href="index.html">Restaurant</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Pictures.html">Galerie</a>
+            <a class="nav-link" href="#">Nos produits</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="COntact.html">Contact</a>
@@ -52,7 +52,7 @@
 <body>
   <div class="maintenance-container">
     <h1>Page en maintenance</h1>
-    <p>Nous sommes actuellement en train de mettre à jour notre site. Merci de votre patience.</p>
+    <p>Nous manquons de clous pour les étagères. Merci de votre patience.</p>
     <div class="spinner-border text-primary" role="status">
       <span class="sr-only">Chargement...</span>
     </div>
