--- a/Menu.html
+++ b/Menu.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,11 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-warning .text-warning">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">Chez vous</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
@@ -34,45 +36,59 @@
     </div>
   </div>
 </nav>
-
-<div class="card"  style="width: 25rem; margin-left: 30px;">
-  <div class="card-body">
-    <h5 class="card-title">Lunch</h5>
-     <div>
-      <h3>Lunch</h3>
-      <p><span class="badge rounded-pill bg-primary">14,87euro</span></p>
-        <ul>
-          <li>Soupe</li>
-          <li>plat</li>
-          <li>repas</li>
-          <li>café/thé</li>
-        </ul>
-     </div>
-  </div>
-</div>
-
-
-  <div >
-      <img class="img-thumbnail float-right"  src="images/lunch.jpg" alt="plat de différents légumes">
-  </div>
-
-
-<div class="container" class="d-flex flex-wrap">
-
-  <div >
-    <h3>Diner</h3>
-      <ul>
-        <li>Menu découverte <span class="badge rounded-pill bg-primary">Tout à un prix</span></li>
-        <li>Menu secret <span class="badge rounded-pill bg-primary">Prix selon le faciès</span></li>
-        <li>Menu ensoleillé <span class="badge rounded-pill bg-primary">Prix au chalumeau</span></li>
-      </ul>
-  </div>
-
-
-
-    <div class="container">
-      <img class="img-thumbnail" src="images/diner_mini.jpg" alt="tablée sombre">
+<br>
+<br>
+<br>
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <div class="">
+        <div class="">
+          <div>
+            <h3>Lunch       <span class="badge rounded-pill bg-primary">14,87euro</span></h3>
+            <p></p>
+            <ul>
+              <li>Soupe</li>
+              <li>plat</li>
+              <li>repas</li>
+              <li>café/thé</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </div>
-</div>    
-</body>
+    <div class="col">
+      <div>
+        <img class="img-fluid" src="images/lunch.jpg" alt="plat de différents légumes">
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+
+  <div class="row">
+    <div class="col">
+        <div>
+          <img class="img-fluid" src="images/diner_mini.jpg" alt="tablée sombre">       
+        </div>
+      </div>
+      <div class="col">
+        <div>
+          <h3>Diner</h3>
+          <ul>
+            <li>Menu découverte <span class="badge rounded-pill bg-primary">Tout à un prix</span></li>
+            <li>Menu secret <span class="badge rounded-pill bg-primary">Prix selon le faciès</span></li>
+            <li>Menu ensoleillé <span class="badge rounded-pill bg-primary">Prix au chalumeau</span></li>
+          </ul>
+        </div>
+      </div>
+  </div>
+  <footer>
+
+  </footer>
+
+    </body>
+
 </html>
