--- a/COntact.html
+++ b/COntact.html
@@ -8,7 +8,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-warning .text-warning">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Chez vous</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,7 +35,7 @@
           </div>
         </div>
       </nav>
-      <div class="panel panel-default">
+      <div class="container panel panel-default mt-4 mb-4">
         <div class="panel-heading">
           <h3 class="panel-title">Réservation</h3>
         </div>
@@ -83,7 +83,7 @@
             <label for="subject">Sujet :</label>
             <select id="subject" class="form-control">
               <option value="Suggestion">Suggestion</option>
-              <option value="Problème technique">Problème technique</option>
+              <option value="Problème technique">Allergies</option>
               <option value="Demande de renseignement">Demande de renseignement</option>
               <option value="Autre">Autre</option>
             </select>
