--- a/Restaurant.html
+++ b/Restaurant.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body class="bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light bg-warning .text-warning">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">Chez vous</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,33 +35,36 @@
           </div>
         </div>
       </nav>
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h1>Restaurant</h1>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <h2>Adresses</h2>
-        <ul>
-          <li>
+
+      <div class="container mt-4 text-light">
+        <div class="col text-center">
+            
+        <h1><strong>Chez Vous !</strong></h1> 
+        <h4>Le Restaurant</h4>
+<br>
+    <p>Plongez dans une expérience gastronomique unique où chaque plat vous fait sentir comme à la maison. 
+        <strong>Chez Vous</strong>, notre objectif est de vous offrir bien plus qu'un repas ; nous vous invitons à vivre une expérience culinaire chaleureuse et conviviale, où chaque visite est comme retrouver de vieux amis dans le confort de votre chez-soi.
+    Découvrez une immersion authentique dans la culture culinaire du Japon au cœur de votre ville.</p>
+   </div>
+      <div class="row">
+        <div class="col-3 offset-1 mb-4 mt-4">
+          <h2>Adresses</h2>
+          <br>
+          <br>
             <h3>Le restaurant</h3>
             <p>Rue de la positude,23B <br>1232 Zenlandia</p>
             <p>+98/1432.4.5543</p>
-          </li>
-          <li>
+          <br>
+          <br> 
             <h3>Le biomarket</h3>
             <p>Rue de la positude,24A <br>1232 Zenlandia</p>
             <p>+98/1432.7.6688</p>
-          </li>
-        </ul>
-      </div>
-      <div class="col-md-6">
+        </div>
+        <div class="col">
         <h2>Carte</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5038.456172626837!2d4.354853376085388!3d50.845460458844485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c47fd1d960c1%3A0xcbd18b1ea8412062!2sBeCode%20Brussels!5e0!3m2!1sfr!2sbe!4v1717499903360!5m2!1sfr!2sbe" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
      </div>
-     </div>
+</div>
 
   <script src="https://ajax.googleapis.com/ajax/pbs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/pbs/popper.js/1.16.0/umd/popper.min.js"></script>
