--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="bg-dark">
     <div class="jumbotron text-center bg-image img-fluid text-light">  
-        <h1>Bienvenue chez vous</h1>
+        <h1>Bienvenue Chez Vous</h1>
         <p>Là où le bonheur se découvre en se sentant chez soi</p>
-        <a class="btn btn-danger btn-lg" href="COntact.html" role="button">Réservation</a>
-    </div>
-    <br>
-    <br>
-    <br>
-    <br>
+        <a class="btn btn-warning btn-lg" href="COntact.html" role="button">Réservation</a>
+    </div container> 
+    <div>
+  
     <div container class="d-flex flex-wrap justify-content-center text-center">
-      <div>
-        <div class="card" style="width: 25rem; margin-right: 30px;">
+    <div>
+        <div class="card"  style="width: 25rem; margin-right: 30px;">
             <div class="card-body">
               <h5 class="card-title">Chez Vous</h5>
               <h6 class="card-subtitle mb-2 text-muted">Le Restaurant</h6>
@@ -27,8 +25,8 @@
               <a href="Menu.html" class="card-link btn btn-warning">Viendez-ici</a>
             </div>
         </div>   
-      </div>   
-        <div class="card"  style="width: 25rem; margin-left: 30px;">
+    </div>   
+        <div class="card" style="width: 25rem; margin-left: 30px;">
           <div class="card-body">
             <h5 class="card-title">Chez Vous</h5>
             <h6 class="card-subtitle mb-2 text-muted">Le BioMarket</h6>
@@ -37,8 +35,8 @@
           </div>
         </div>  
     </div>
-
-    
+    </div>
+  </div> 
 
     <script src="https://ajax.googleapis.com/ajax/pbs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/pbs/popper.js/1.16.0/umd/popper.min.js"></script>
