--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="bg-dark">
-    <div class="jumbotron text-center bg-image img-fluid text-light">  
+<body class="bg-image">
+    <div class="jumbotron text-center text-danger bg-dark">  
         <h1>Bienvenue Chez Vous</h1>
         <p>Là où le bonheur se découvre en se sentant chez soi</p>
         <a class="btn btn-warning btn-lg" href="COntact.html" role="button">Réservation</a>
@@ -37,6 +37,13 @@
     </div>
     </div>
   </div> 
+
+  <footer>
+<div class="footer">
+
+</div>
+
+  </footer>
 
     <script src="https://ajax.googleapis.com/ajax/pbs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/pbs/popper.js/1.16.0/umd/popper.min.js"></script>
