--- a/Menu.html
+++ b/Menu.html
@@ -8,87 +8,106 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<nav class="navbar navbar-expand-lg navbar-light bg-warning .text-warning">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">Chez vous</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-      aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Menu.html">Menu</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Restaurant.html">Restaurant</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Pictures.html">Galerie</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="COntact.html">Contact</a>
-        </li>
-      </ul>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light .text-warning py-4">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="" class="bg-images border"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Menu.html">Menu</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Restaurant.html">Restaurant</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Pictures.html">Galerie</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="COntact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
-<br>
-<br>
-<br>
-<div class="container">
-  <div class="row">
-    <div class="col">
-      <div class="">
-        <div class="">
+  </nav>
+  <div class="images">
+    <br>
+    <br>
+    <br>
+
+    <div class="container text-light">
+      <div class="row">
+        <div class="col">
+
           <div>
-            <h3>Lunch       <span class="badge rounded-pill bg-primary">14,87euro</span></h3>
+            <h3>Menu Taïsho <span class="badge rounded-pill bg-light text-dark">30 e.</span></h3>
             <p></p>
             <ul>
-              <li>Soupe</li>
-              <li>plat</li>
-              <li>repas</li>
-              <li>café/thé</li>
+              <p>STARTER</p>
+              <p>ASSORTED STARTERS</p>
+              <p>前菜の盛り合わせ</p>
+              <p>CHEF’S SPECIAL</p>
+              <p>本⽇のスペシャル</p>
+              <p>TODAY’S MAIN DISH 1</p>
+              <p>本⽇のメニュー1</p>
+              <p>TODAY’S MAIN DISH 2 </p>
+              <p>本⽇のメニュー2</p>
+              <p>+ RICE, MISO SOUP</p>
+            </ul>
+          </div>
+
+        </div>
+        <div class="col">
+          <div>
+            <img class="img-fluid border" src="images/lunch.jpg" alt="plat de différents légumes">
+          </div>
+        </div>
+      </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <div class="row">
+        <div class="col">
+          <div>
+            <img class="img-fluid border" src="images/diner_mini.jpg" alt="tablée sombre">
+          </div>
+        </div>
+        <div class="col">
+          <div>
+            <h3>P'tit menu de la geisha <span class="badge rounded-pill bg-light text-dark"> 20 e.</span></h3>
+            <ul>
+              <p>STARTER</p>
+              <p>ASSORTED STARTERS</p>
+              <p>前菜の盛り合わせ</p>
+              <p>Assortiment Yakitori</p>
             </ul>
           </div>
         </div>
       </div>
     </div>
-    <div class="col">
-      <div>
-        <img class="img-fluid" src="images/lunch.jpg" alt="plat de différents légumes">
-      </div>
-    </div>
-  </div>
-  <br>
-  <br>
-  <br>
-  <br>
-
-  <div class="row">
-    <div class="col">
-        <div>
-          <img class="img-fluid" src="images/diner_mini.jpg" alt="tablée sombre">       
+    <br>
+    <footer>
+      <div class="container-fuid bg-dark">
+        <div class="row">
+          <div class="col text-light d-flex-bottom pl-4">
+            <p></p>mention légal</p>
+          </div>
+          <div class="col text-light d-flex justify-content-end pl-4">
+            <p>since 2024</p>
+            <a href=""></a>
+          </div>
         </div>
       </div>
-      <div class="col">
-        <div>
-          <h3>Diner</h3>
-          <ul>
-            <li>Menu découverte <span class="badge rounded-pill bg-primary">Tout à un prix</span></li>
-            <li>Menu secret <span class="badge rounded-pill bg-primary">Prix selon le faciès</span></li>
-            <li>Menu ensoleillé <span class="badge rounded-pill bg-primary">Prix au chalumeau</span></li>
-          </ul>
-        </div>
-      </div>
-  </div>
-  <footer>
-
-  </footer>
-
-    </body>
+    </footer>
+</body>
 
 </html>
