--- a/COntact.html
+++ b/COntact.html
@@ -8,33 +8,34 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-warning .text-warning">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="index.html">Chez vous</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Menu.html">Menu</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Restaurant.html">Restaurant</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="Pictures.html">Galerie</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="COntact.html">Contact</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+  <nav class="navbar navbar-expand-lg navbar-light bg-warning .text-warning py-4">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="" class="bg-images border"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Menu.html">Menu</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Restaurant.html">Restaurant</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Pictures.html">Galerie</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="COntact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
       <div class="container panel panel-default mt-4 mb-4">
         <div class="panel-heading">
           <h3 class="panel-title">Réservation</h3>
