--- a/Menu.html
+++ b/Menu.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light .text-warning py-4">
+  <nav class="navbar navbar-expand-lg navbar-light bg-warning .text-warning py-4">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="" class="bg-images border"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -67,7 +67,7 @@
         </div>
         <div class="col">
           <div>
-            <img class="img-fluid border" src="images/lunch.jpg" alt="plat de différents légumes">
+            <img class="img-fluid border" src="images/highball.jpg" alt="plat de différents légumes">
           </div>
         </div>
       </div>
@@ -78,7 +78,7 @@
       <div class="row">
         <div class="col">
           <div>
-            <img class="img-fluid border" src="images/diner_mini.jpg" alt="tablée sombre">
+            <img class="img-fluid border" src="images/menugei.jpg" alt="tablée sombre">
           </div>
         </div>
         <div class="col">
@@ -96,12 +96,12 @@
     </div>
     <br>
     <footer>
-      <div class="container-fuid bg-dark">
+      <div class="container-fuid bg-warning px-4">
         <div class="row">
-          <div class="col text-light d-flex-bottom pl-4">
+          <div class="col text-light">
             <p></p>mention légal</p>
           </div>
-          <div class="col text-light d-flex justify-content-end pl-4">
+          <div class="col text-dark d-flex justify-content-end">
             <p>since 2024</p>
             <a href=""></a>
           </div>
