--- a/Pictures.html
+++ b/Pictures.html
@@ -9,9 +9,9 @@
 </head>
 <body class="bg-dark">
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-warning .text-warning">
+  <nav class="navbar navbar-expand-lg navbar-light bg-warning .text-warning py-4">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Chez vous</a>
+      <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="" class="bg-images border"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
