--- a/biomarket.html
+++ b/biomarket.html
@@ -8,6 +8,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <nav class="navbar navbar-expand-lg navbar-light bg-warning .text-warning">
+  <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="" class="bg-images border"></a>
     <div class="container-fluid">
       <a class="navbar-brand" href="Welcome.html">Chez vous BioMarket</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
