--- a/COntact.html
+++ b/COntact.html
@@ -99,6 +99,20 @@
     </div>
   </div>
 
+  <footer>
+    <div class="container-fluid bg-warning">
+      <div class="row">
+        <div class="col text-dark">
+          <a href="#">mention légale</a>
+      </div>
+        <div class="col d-flex justify-content-end">
+          <a href="#"><img src="images/instagram.png" alt="https://instagram.com"></a>
+          <a href="#"><img src="images/twitter.png" alt="https://twitter.com"></a>
+        </div>
+      </div>
+    </div>
+  </footer>
+
   <script src="https://ajax.googleapis.com/ajax/pbs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/pbs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
