--- a/Menu.html
+++ b/Menu.html
@@ -96,14 +96,14 @@
     </div>
     <br>
     <footer>
-      <div class="container-fuid bg-warning px-4">
+      <div class="container-fluid bg-warning">
         <div class="row">
-          <div class="col text-light">
-            <p></p>mention légal</p>
-          </div>
-          <div class="col text-dark d-flex justify-content-end">
-            <p>since 2024</p>
-            <a href=""></a>
+          <div class="col text-dark">
+            <a href="#">mention légale</a>
+        </div>
+          <div class="col d-flex justify-content-end">
+            <a href="#"><img src="images/instagram.png" alt="https://instagram.com"></a>
+            <a href="#"><img src="images/twitter.png" alt="https://twitter.com"></a>
           </div>
         </div>
       </div>
