--- a/Pictures.html
+++ b/Pictures.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Page</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome Page</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .custom-image {
+      width: 300px;
+      /* Ajustez la largeur des images selon vos besoins */
+      height: auto;
+      /* Conserve le ratio de l'image */
+    }
+
+    footer {
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background-color: #ffc107;
+      padding: 10px 0;
+    }
+
+    footer .container-fluid {
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+    footer .col {
+      padding: 0 18px;
+    }
+
+    footer img {
+      max-width: 30px;
+      height: auto;
+    }
+  </style>
 </head>
+
 <body class="bg-dark">
 
   <nav class="navbar navbar-expand-lg navbar-light bg-warning .text-warning py-4">
@@ -37,72 +69,94 @@
       </div>
     </div>
   </nav>
-<br>
-<br>
-<section class="bg-dark">
-<div class="text-center text-light">
-  <h1>Galerie</h1>
-  <h5>Nos plats et bien plus</h5>
-</div>
+  <br>
+  <br>
 
-<div class="container">
+  <div class="text-center text-light">
+    <h1>Galerie</h1>
+    <h5>Nos plats et bien plus</h5>
+    <p> Laissez vous emporter par notre ambiance chaleureuse et conviviale !</p>
+  </div>
+
+
+  <div class="container">
     <div id="page1" class="photo-page text-center">
-        <img src="images/plat1.jpg" class="img-thumbnail" alt="Photo 1" onclick="displayFullScreen('images/plat1.jpg')">
-        <img src="images/plat2_mini.jpg" class="img-thumbnail" alt="Photo 2" onclick="displayFullScreen('images/plat2_mini.jpg')">
-        <img src="images/plat3_mini.jpg" class="img-thumbnail" alt="Photo 3" onclick="displayFullScreen('images/plat3_mini.jpg')">
+      <img src="images/plat1.jpg" class="img-thumbnail custom-image" alt="Photo 1"
+        onclick="displayFullScreen('images/plat1.jpg')">
+      <img src="images/plat2_mini.jpg" class="img-thumbnail custom-image" alt="Photo 2"
+        onclick="displayFullScreen('images/plat2_mini.jpg')">
+      <img src="images/plat3_mini.jpg" class="img-thumbnail custom-image" alt="Photo 3"
+        onclick="displayFullScreen('images/plat3_mini.jpg')">
     </div>
 
     <div id="page2" class="photo-page" style="display: none;">
-        <img src="images/plat4_mini.jpg" class="img-thumbnail" alt="Photo 4" onclick="displayFullScreen('images/plat4_mini.jpg')">
-        <img src="images/plat5_mini.jpg" class="img-thumbnail" alt="Photo 5" onclick="displayFullScreen('images/plat5_mini.jpg')">
-        <img src="images/plat6_mini.jpg" class="img-thumbnail" alt="Photo 6" onclick="displayFullScreen('images/plat6_mini.jpg')">
+      <img src="images/plat4_mini.jpg" class="img-thumbnail custom-image" alt="Photo 4"
+        onclick="displayFullScreen('images/plat4_mini.jpg')">
+      <img src="images/plat5_mini.jpg" class="img-thumbnail custom-image" alt="Photo 5"
+        onclick="displayFullScreen('images/plat5_mini.jpg')">
+      <img src="images/plat6_mini.jpg" class="img-thumbnail custom-image" alt="Photo 6"
+        onclick="displayFullScreen('images/plat6_mini.jpg')">
     </div>
 
     <div id="page3" class="photo-page" style="display: none;">
-        <img src="images/plat7_mini.jpg" class="img-thumbnail" alt="Photo 7" onclick="displayFullScreen('images/plat7_mini.jpg')">
-        <img src="images/plat8_mini.jpg" class="img-thumbnail" alt="Photo 8" onclick="displayFullScreen('images/plat8_mini.jpg')">
-        <img src="images/plat9_mini.jpg" class="img-thumbnail" alt="Photo 9" onclick="displayFullScreen('images/plat9_mini.jpg')">
+      <img src="images/plat7_mini.jpg" class="img-thumbnail custom-image" alt="Photo 7"
+        onclick="displayFullScreen('images/plat7_mini.jpg')">
+      <img src="images/plat8_mini.jpg" class="img-thumbnail custom-image" alt="Photo 8"
+        onclick="displayFullScreen('images/plat8_mini.jpg')">
+      <img src="images/plat9_mini.jpg" class="img-thumbnail custom-image" alt="Photo 9"
+        onclick="displayFullScreen('images/plat9_mini.jpg')">
     </div>
-</div>
+  </div>
 
-<div class="modal fade" id="fullscreenModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="fullscreenModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
-        <div class="modal-content">
-            <div class="modal-body text-center">
-                <img id="fullscreenImage" src="" class="img-fluid" alt="Photo en grand">
-            </div>
+      <div class="modal-content">
+        <div class="modal-body text-center">
+          <img id="fullscreenImage" src="" class="img-fluid" alt="Photo en grand">
         </div>
+      </div>
     </div>
-</div>
+  </div>
+  <div class="col text-center text-white">
+    <p>Cela vous à donné faim ? N'hésitez pas à jeter un oeil à notre <a href="Menu.html"><strong>menu</strong></a> !
+    </p>
+  </div>
 
-<nav aria-label="Page navigation example" class="mt-4">
-    <ul class="pagination justify-content-center">
-        <li class="page-item"><a class="page-link" href="#" onclick="showPage(1)">1</a></li>
-        <li class="page-item"><a class="page-link" href="#" onclick="showPage(2)">2</a></li>
-        <li class="page-item"><a class="page-link" href="#" onclick="showPage(3)">3</a></li>
-    </ul>
-</nav>
+  <footer>
+    <div class="container-fluid bg-warning">
+      <div class="row">
+        <div class="col text-dark">
+          <a href="#">mention légale</a>
+        </div>
+        <div class="col d-flex justify-content-end">
+          <a href="#"><img src="images/instagram.png" alt="https://instagram.com"></a>
+          <a href="#"><img src="images/twitter.png" alt="https://twitter.com"></a>
+        </div>
+      </div>
+    </div>
+  </footer>
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script>
     function showPage(pageNumber) {
-        document.querySelectorAll('.photo-page').forEach(function(page) {
-            page.style.display = 'none';
-        });
-        document.getElementById('page' + pageNumber).style.display = 'block';
+      document.querySelectorAll('.photo-page').forEach(function (page) {
+        page.style.display = 'none';
+      });
+      document.getElementById('page' + pageNumber).style.display = 'block';
     }
-</script>
+  </script>
 
-<script>
+  <script>
     function displayFullScreen(imageSrc) {
-        var fullscreenImage = document.getElementById('fullscreenImage');
-        fullscreenImage.src = imageSrc;
-        $('#fullscreenModal').modal('show');
+      var fullscreenImage = document
+        .getElementById('fullscreenImage');
+      fullscreenImage.src = imageSrc;
+      $('#fullscreenModal').modal('show');
     }
-</script>
-</section>
+  </script>
 </body>
+
 </html>
