--- a/index.html
+++ b/index.html
@@ -39,10 +39,17 @@
   </div> 
 
   <footer>
-<div class="footer">
-
-</div>
-
+    <div class="container-fluid bg-warning">
+      <div class="row">
+        <div class="col text-dark">
+          <a href="#">mention légale</a>
+      </div>
+        <div class="col d-flex justify-content-end">
+          <a href="#"><img src="images/instagram.png" alt="https://instagram.com"></a>
+          <a href="#"><img src="images/twitter.png" alt="https://twitter.com"></a>
+        </div>
+      </div>
+    </div>
   </footer>
 
     <script src="https://ajax.googleapis.com/ajax/pbs/jquery/3.5.1/jquery.min.js"></script>
