--- a/biomarket.html
+++ b/biomarket.html
@@ -22,11 +22,12 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Notre ferme</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Restaurant</a>
-          </li>
+         
           <li class="nav-item">
             <a class="nav-link" href="#">Nos produits</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="Restaurant.html">Restaurant</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="COntact.html">Contact</a>
