--- a/Menu.html
+++ b/Menu.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome Page</title>
+  <title>Menu Page</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -23,17 +23,21 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Menu.html">Menu</a>
+          <a class="nav-link" href="Restaurant.html">Restaurant</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Restaurant.html">Restaurant</a>
+          <a class="nav-link" href="Menu.html">Menu</a>  
           </li>
           <li class="nav-item">
             <a class="nav-link" href="Pictures.html">Galerie</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="biomarket.html">BioMarket</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="COntact.html">Contact</a>
           </li>
+         
         </ul>
       </div>
     </div>
@@ -67,7 +71,7 @@
         </div>
         <div class="col">
           <div>
-            <img class="img-fluid border" src="images/highball.jpg" alt="plat de différents légumes">
+            <img class="img-fluid border" src="images/highball.jpg" alt="highball et légumes frit">
           </div>
         </div>
       </div>
@@ -78,7 +82,7 @@
       <div class="row">
         <div class="col">
           <div>
-            <img class="img-fluid border" src="images/menugei.jpg" alt="tablée sombre">
+            <img class="img-fluid border" src="images/menu2.jpg" alt="riz et scampis frit">
           </div>
         </div>
         <div class="col">
