--- a/Restaurant.html
+++ b/Restaurant.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Page</title>
+    <title>Restaurant Page</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -21,13 +21,16 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
+          <a class="nav-link" href="Restaurant.html">Restaurant</a>  
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="Menu.html">Menu</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Restaurant.html">Restaurant</a>
+            <a class="nav-link" href="Pictures.html">Galerie</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="Pictures.html">Galerie</a>
+            <a class="nav-link" href="biomarket.html">BioMarket</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="COntact.html">Contact</a>
@@ -39,31 +42,37 @@
 
   <div class="container mt-4 text-light">
     <div class="col text-center">
-      <h1><strong>Chez Vous !</strong></h1> 
-      <h4>Le Restaurant</h4>
+      <h1 class="text-dark"><strong>Chez Vous !</strong></h1> 
+      <h4 class="text-warning">Le Restaurant</h4>
       <br>
-      <p>Plongez dans une expérience gastronomique unique où chaque plat vous fait sentir comme à la maison. 
-        <strong>Chez Vous</strong>, notre objectif est de vous offrir bien plus qu'un repas ; nous vous invitons à vivre une expérience culinaire chaleureuse et conviviale, où chaque visite est comme retrouver de vieux amis dans le confort de votre chez-soi.
-      Découvrez une immersion authentique dans la culture culinaire du Japon au cœur de votre ville.</p>
+      <p><strong>Plongez dans une expérience gastronomique unique où chaque plat vous fait sentir comme à la maison. 
+        Chez Vous, notre objectif est de vous offrir bien plus qu'un repas ; nous vous invitons à vivre une expérience culinaire chaleureuse et conviviale, où chaque visite est comme retrouver de vieux amis dans le confort de votre chez-soi.
+      Découvrez une immersion authentique dans la culture culinaire du Japon au cœur de votre ville.</strong></p>
     </div>
     <div class="row">
       <div class="col-3 offset-1 mb-4 mt-4">
-        <h2>Adresses</h2>
+        <h4 class="text-dark">Le restaurant</h4>
+        <ul>
+          <li class="text-light"><strong>Lundi - Vendredi</strong> : 12:00 - 14:30, 18:30 - 22:30</li>
+            <li class="text-light"><strong>Samedi :</strong>18:30 - 23:00</li>
+           <li class="text-light"><strong>Dimanche :</strong>Fermé</li> 
+        </ul>
         <br>
         <br>
-        <h3>Le restaurant</h3>
-        <p>Rue de la positude,23B <br>1232 Zenlandia</p>
-        <p>+98/1432.4.5543</p>
-        <br>
-        <br> 
-        <h3>Le biomarket</h3>
-        <p>Rue de la positude,24A <br>1232 Zenlandia</p>
-        <p>+98/1432.7.6688</p>
+        <h4 class="text-dark">Le biomarket</h4>
+        <ul>
+        <li class="text-light"><strong>Lundi - Vendredi</strong> : 08:00 - 20:00</li>
+        <li class="text-light"><strong>Samedi</strong> : 08:00 - 19:00</li>
+        <li class="text-light"><strong>Dimanche :</strong>Fermé</li>
+       </ul>
       </div>
       <div class="col">
-        <h2>Carte</h2>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5038.456172626837!2d4.354853376085388!3d50.845460458844485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c3c47fd1d960c1%3A0xcbd18b1ea8412062!2sBeCode%20Brussels!5e0!3m2!1sfr!2sbe!4v1717499903360!5m2!1sfr!2sbe" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
+      <p class="text-warning">N'hésitez pas à regarder nos plats via notre <a href="Pictures.html">galerie</a>.</p>
+      <br>
+      <br>
+      <br>
+    </div>
     </div>
   </div>
 
