--- a/index.html
+++ b/index.html
@@ -1,49 +1,55 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Page</title>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body class="bg-image">
-    <div class="jumbotron text-center text-danger bg-dark">  
-        <h1>Bienvenue Chez Vous</h1>
-        <p>Là où le bonheur se découvre en se sentant chez soi</p>
-        <a class="btn btn-warning btn-lg" href="COntact.html" role="button">Réservation</a>
-    </div container> 
-    <div>
-  
-    <div container class="d-flex flex-wrap justify-content-center text-center">
-    <div>
-        <div class="card"  style="width: 25rem; margin-right: 30px;">
-            <div class="card-body">
-              <h5 class="card-title">Chez Vous</h5>
-              <h6 class="card-subtitle mb-2 text-muted">Le Restaurant</h6>
-              <p class="card-text">Rue de la positude,23B <br>1232 Zenlandia <br>+98/1432.4.5543</p>
-              <a href="Menu.html" class="card-link btn btn-warning">Viendez-ici</a>
-            </div>
-        </div>   
-    </div>   
-        <div class="card" style="width: 25rem; margin-left: 30px;">
-          <div class="card-body">
-            <h5 class="card-title">Chez Vous</h5>
-            <h6 class="card-subtitle mb-2 text-muted">Le BioMarket</h6>
-            <p class="card-text">Rue de la positude,24A <br>1232 Zenlandia <br>+98/1432.4.5543</p>
-            <a href="biomarket.html" class="card-link btn btn-warning">Viendez-là</a>
-          </div>
-        </div>  
-    </div>
-    </div>
-  </div> 
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Welcome Page</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/pbs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/pbs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</head>
+
+<body class="bg-image">
+  <div class="jumbotron text-center text-danger bg-dark">
+    <h1>Bienvenue Chez Vous</h1>
+    <p>Là où le bonheur se découvre en se sentant chez soi</p>
+    <a class="btn btn-warning btn-lg" href="COntact.html" role="button">Réservation</a>
+  </div>
+  <div container class="d-flex flex-wrap justify-content-center text-center">
+    <div>
+      <div class="card" style="width: 25rem; margin-right: 30px;">
+        <div class="card-body">
+          <h5 class="card-title">Chez Vous</h5>
+          <h6 class="card-subtitle mb-2 text-muted">Le Restaurant</h6>
+          <p class="card-text">Rue de la positude,23B <br>1232 Zenlandia <br>+98/1432.4.5543</p>
+          <a href="Restaurant.html" class="card-link btn btn-warning">Viendez-ici</a>
+        </div>
+      </div>
+    </div>
+    <div class="card" style="width: 25rem; margin-left: 30px;">
+      <div class="card-body">
+        <h5 class="card-title">Chez Vous</h5>
+        <h6 class="card-subtitle mb-2 text-muted">Le BioMarket</h6>
+        <p class="card-text">Rue de la positude,24A <br>1232 Zenlandia <br>+98/1432.4.5543</p>
+        <a href="biomarket.html" class="card-link btn btn-warning">Viendez-là</a>
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <footer>
     <div class="container-fluid bg-warning">
       <div class="row">
         <div class="col text-dark">
           <a href="#">mention légale</a>
-      </div>
+        </div>
         <div class="col d-flex justify-content-end">
           <a href="#"><img src="images/instagram.png" alt="https://instagram.com"></a>
           <a href="#"><img src="images/twitter.png" alt="https://twitter.com"></a>
@@ -51,9 +57,6 @@
       </div>
     </div>
   </footer>
-
-    <script src="https://ajax.googleapis.com/ajax/pbs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/pbs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
