--- a/biomarket.html
+++ b/biomarket.html
@@ -52,6 +52,7 @@
   </style>
 </head>
 <body>
+  <img src="images/biomarketfond.jpg" alt="legume">
   <div class="maintenance-container">
     <h1>Page en maintenance</h1>
     <p>Nous manquons de clous pour les étagères. Merci de votre patience.</p>
